--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -41,11 +41,9 @@ hero:
   hero-title: Hello! This page <br> is under construction
 
 social:
-- {icon: "ti-facebook", link: "#"}
-- {icon: "ti-instagram", link: "#"}
-- {icon: "ti-dribbble", link: "#"}
-- {icon: "ti-twitter", link: "#"}
-
+- {icon: "ti-linkedin", link: "https://www.linkedin.com/in/alvin-ulido-lumbanraja-785b567a/"}
+- {icon: "ti-twitter", link: "https://twitter.com/alvinulido"}
+- {icon: "ti-github", link: "https://github.com/alvinulido"}
 
 #-------------------------------
 # About (Section and Page)
