--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ title: Alvin Lumbanraja
 logo: 
 author: Alvin Lumbanraja
 description: this is meta description
-email: alvin.lumbanraja@kellogg.northwestern.edu
+email: alvin.lumbanraja <br> @kellogg.northwestern.edu
 phone: +1 (315) 455-0830
 address: 2211 Campus Drive, Evanston, IL, 60208
 copyright: Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Getjekyllthemes](https://getjekyllthemes.com)
@@ -291,4 +291,4 @@ client-slider-items:
 # Contact Section
 
 contact-title: Contact Info
-contact-email: steve.fruits@email.com
+contact-email: alvin.lumbanraja@kellogg.northwestern.edu
