--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -104,9 +104,9 @@ skills:
 
 experience-title: Experience
 experience:
-- {name: Junior UX Designer, icon: 'icon-1.png', date: 'Jan 2007 - Feb 2009', organization: 'WEBEX'}
-- {name: UX & UI Designer, icon: 'icon-2.png', date: 'Mar 2009 - Aug 2014', organization: 'AUGMEDIX'}
-- {name: Senior UI Designer, icon: 'icon-3.png', date: 'Sep 2014 - Present', organization: 'THEMEFISHER'}
+- {name: Empirical Research Fellow, icon: 'icon-1.png', date: 'May 2021 - Present', organization: 'Northwestern Kellogg'}
+- {name: Research Analyst, icon: 'icon-2.png', date: 'Sep 2020 - Apr 2021', organization: 'World Bank'}
+- {name: Research Assistant, icon: 'icon-3.png', date: 'Nov 2018 - Jun 2020', organization: 'World Bank'}
 
 
 #-------------------------------
@@ -114,11 +114,8 @@ experience:
 
 education-title: Education
 education:
-- {name: Marters in UX Design, date: '2006', organization: 'Masassusets Institute of Technology'}
-- {name: Honours in Fine Arts, date: '2004', organization: 'Harvard University'}
-- {name: Higher Secondary Certificat, date: '2000', organization: 'Cardiff School'}
-- {name: Secondary School Certificate, date: '1998', organization: 'Cardiff School'}
-
+- {name: MA in Social Science (Economics), date: '2020', organization: 'University of Chicago'}
+- {name: Bachelor in Economics, date: '2015', organization: 'Universitas Indonesia'}
 
 #-------------------------------
 # Services Section
