--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -51,8 +51,8 @@ social:
 
 # About Section
 blurb:
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
+  <i> Selamat datang! </i>. I am Alvin and I currently work as empirical research fellow for the Finance Department at Kellogg School of Management. Please excuse the unfinished look of this website as I am still in the process of building this website. 
+  
 blurb-btn-link: '/about'
 blurb-btn-name: know more
 
