--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 
-title: Alvin U. Lumbanraja
+title: Alvin <br> U. Lumbanraja
 logo: 
 author: Alvin U. Lumbanraja
 description: this is meta description
