--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,8 +12,8 @@ copyright: Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.c
 
 menu:
 - {name: About, link: '/about'}
-- {name: Blog, link: '/blog'}
-- {name: Portfolio, link: '/portfolio'}
+- {name: Projects, link: '/blog'}
+# - {name: Portfolio, link: '/portfolio'}
 - {name: Contact, link: '/contact'}
 
 
