--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,8 +6,8 @@ logo:
 author: Alvin U. Lumbanraja
 description: this is meta description
 email: alvin.lumbanraja <br> @kellogg.northwestern.edu
-phone: +1 (315) 455-0830
-address: 2211 Campus Drive, Evanston, IL, 60208
+phone: (US) +1 (315) 455-0830
+address: Kellogg Global Hub, Rm 4474 <br> 2211 Campus Drive, Evanston, IL, 60208
 copyright: Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Getjekyllthemes](https://getjekyllthemes.com)
 
 menu:
