--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -50,7 +50,7 @@ social:
 
 # About Section
 blurb:
-  <i> Selamat datang! </i> I am Alvin and I currently work as empirical research fellow for the Finance Department of Kellogg School of Management at Northwestern University. Please excuse the unfinished look of this website as I am still in the process of building this website. 
+  <i> Selamat datang! </i> I am Alvin and I am first-year Finance PhD student at the Finance Department of Kellogg School of Management at Northwestern University. Prior to starting my PhD, I was employed as empirical research fellow at the same department. Please excuse the unfinished look of this website as I am still in the process of building this website. 
   
 blurb-btn-link: '/about'
 blurb-btn-name: know more
@@ -115,9 +115,9 @@ experience:
 
 education-title: Education
 education:
-- {name: 'PhD, Finance', icon: 'kellogg.png',  date: '2022-', organization: 'Northwestern University'}
-- {name: 'MA, Social Science (Economics)', icon: 'uchicago.svg', date: '2019-2020', organization: 'University of Chicago'}
-- {name: 'BA, Economics', icon: 'ui.png', date: '2011-2015', organization: 'Universitas Indonesia'}
+- {name: 'PhD, Finance', icon: 'assets/images/education/kellogg.png',  date: '2022-', organization: 'Northwestern University'}
+- {name: 'MA, Social Science (Economics)', icon: 'assets/images/education/uchicago.svg', date: '2019-2020', organization: 'University of Chicago'}
+- {name: 'BA, Economics', icon: 'assets/images/education/ui.png', date: '2011-2015', organization: 'Universitas Indonesia'}
 
 #-------------------------------
 # Services Section
