--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Alvin U. Lumbanraja"
 title_separator          : "-"
 name                     : &name "Alvin U. Lumbanraja"
-description              : &description "personal description"
+description              : &description "Finance PhD at Northwestern University"
 url                      : https://alumbanraja.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "alumbanraja/alumbanraja.github.io"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Alvin U. Lumbanraja"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Finance PhD, Kellogg School of Management"
   location         : "Evanston, IL"
   employer         :
