--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "academic" # the name of your site, e.g. ACME Corp.
 description: "a Jekyll theme for academia"
+
+
+permalink: /:categories/:year/:month/:day/:title/
