--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,8 @@
-- title: 'B.Sc. (Hons) Physics & Applied Mathematics'
-  description: 'The University of Waterloo (1976-1980)'
+- title: 'Ph.D in Finance'
+  description: 'Kellogg School of Management, Northwestern University (2022-Present)'
 
-- title: 'Ph.D. Theoretical High Energy Physics'
-  description: 'The University of Texas at Austin (1980-1985)'
+- title: 'MA in Social Science (Economics)'
+  description: 'University of Chicago (2019-2020)'
+
+- title: 'Sarjana Ekonomi (Bachelor of Economics)'
+  description: 'Universitas Indonesia (2011-2015)'
